# eresumao_django

./: .env  .isort.cfg  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
eresumao/: asgi.py  settings.py  urls.py  wsgi.py
